rtest/tests/jsr335/Semantics/OverloadResolution/ConstructorReference/ShouldFail/syntax06/Test.java
// .result=COMPILE_FAIL
import java.util.*;

public class Test {
	interface A {
		ArrayList<String> m(); 
	}
	
	
	public void method(A a) {
		
	}
	
	public void testMethod() {
		// Reference not congruent with A
		method(ArrayList<Integer>::new);
	}
	
}